--- a/_locales/ja/ArtecRobo-strings.json
+++ b/_locales/ja/ArtecRobo-strings.json
@@ -1,8 +1,7 @@
 {
-  "DCmotion.On|block": "正転"
-  ,"DCmotion.Backward|block": "逆転"
-  ,"DCmotion.Brake|block": "停止"
-  ,"DCmotion.Coast|block": "解放"
-  ,"connectorDCMotor.M1|block": "M1"
-  ,"connectorDCMotor.M2|block": "M2"
+  "DCmotion.ON|block": "正転"
+  ,"DCmotion.OFF|block": "逆転"
+  ,"connectorDCMotor.P0|block": "P0"
+  ,"connectorDCMotor.P1|block": "P1"
+  ,"connectorDCMotor.P1|block": "P2"
 }
